--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,4 +41,8 @@ dependencies {
 
     //lbr
     implementation 'com.cottacush:CurrencyEditText:0.0.7'
+
+    // RecyclerView
+    def recyclerview_version = "1.2.1"
+    implementation "androidx.recyclerview:recyclerview:$recyclerview_version"
 }
